# games106

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
HelloTriangle/: CMakeLists.txt
Sample/: CMakeLists.txt
Sample/HelloTriangle/: CMakeLists.txt  main.cpp
Sample/gltfLoad/: CMakeLists.txt
cmake/: command.cmake  shader-link.cmake
gltfLoad/: CMakeLists.txt  UI.cpp  gltfLoadSample.cpp  gltfLoadSample.h  gltfLoadSample.json
homework0/: CMakeLists.txt  main.cpp
homework1/: CMakeLists.txt  Homework1Sample.cpp  Homework1Sample.h  UI.cpp
homeworkCommon/: CMakeLists.txt  stdafx.h
